# pokemon-streamlit

./: .gitignore  Dockerfile  app.py  pyproject.toml
data/: Pokemon_Gen_1-8.csv
